// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snippet Component does not render when title is empty 1`] = `
<div>
  


</div>
`;

exports[`Snippet Component renders with content slots 1`] = `
<div>
  

  
  <div
    class="ct-snippet ct-theme-light "
  >
    
          
    <div
      class="ct-snippet__content"
    >
      
                              
      <div
        class="ct-snippet__content-top"
      >
        Top content
      </div>
      
                  
                                          
      <div
        class="ct-snippet__title"
      >
                                      Snippet Title
                          
      </div>
      
                  
                              
      <div
        class="ct-snippet__content-middle"
      >
        Middle content
      </div>
      
                  
                          
                          
                              
      <div
        class="ct-snippet__content-bottom"
      >
        Bottom content
      </div>
      
                        
    </div>
    
      
  </div>
  

</div>
`;

exports[`Snippet Component renders with link and tags 1`] = `
<div>
  

  
  <div
    class="ct-snippet ct-theme-light "
  >
    
          
    <div
      class="ct-snippet__content"
    >
      
                          
                                          
      <div
        class="ct-snippet__title"
      >
                                      
        <a
          class="ct-snippet__title-link"
          href="https://example.com/read-more"
        >
          Snippet Title
        </a>
        
                          
      </div>
      
                  
                          
                          
                              
      <div
        class="ct-snippet__tags"
      >
        
              

  
        <div
          class="ct-tag-list ct-theme-light  "
        >
          
              
                                                                                          

  
          <ul
            class="ct-item-list ct-item-list--horizontal ct-item-list--small  ct-tag-list__content"
          >
            
                  
            <li
              class="ct-item-list__item"
            >
                          

  
  
  
    
              <span
                class="ct-tag ct-theme-light ct-tag--primary    "
              >
                    Tag1  
              </span>
              
          
            </li>
            
                        
            <li
              class="ct-item-list__item"
            >
                          

  
  
  
    
              <span
                class="ct-tag ct-theme-light ct-tag--primary    "
              >
                    Tag2  
              </span>
              
          
            </li>
            
            
          </ul>
          
          
                
        </div>
        
            
      </div>
      
                  
                                
    </div>
    
      
  </div>
  

</div>
`;

exports[`Snippet Component renders with optional attributes 1`] = `
<div>
  

  
  <div
    class="ct-snippet ct-theme-dark custom-class"
    data-test="true"
  >
    
          
    <div
      class="ct-snippet__content"
    >
      
                              
      <div
        class="ct-snippet__content-top"
      >
        Top content
      </div>
      
                  
                                          
      <div
        class="ct-snippet__title"
      >
                                      
        <a
          class="ct-snippet__title-link"
          href="https://example.com/read-more"
          target="_blank"
        >
          Snippet Title
        </a>
        
                          
      </div>
      
                  
                              
      <div
        class="ct-snippet__content-middle"
      >
        Middle content
      </div>
      
                  
                              


      <div
        class="ct-paragraph ct-theme-dark ct-paragraph--regular ct-paragraph--no-margin ct-snippet__summary"
      >
        This is the summary of the snippet.
      </div>
                        
                              
      <div
        class="ct-snippet__tags"
      >
        
              

  
        <div
          class="ct-tag-list ct-theme-dark  "
        >
          
              
                                                                                          

  
          <ul
            class="ct-item-list ct-item-list--horizontal ct-item-list--small  ct-tag-list__content"
          >
            
                  
            <li
              class="ct-item-list__item"
            >
                          

  
  
  
    
              <span
                class="ct-tag ct-theme-dark ct-tag--primary    "
              >
                    Tag1  
              </span>
              
          
            </li>
            
                        
            <li
              class="ct-item-list__item"
            >
                          

  
  
  
    
              <span
                class="ct-tag ct-theme-dark ct-tag--primary    "
              >
                    Tag2  
              </span>
              
          
            </li>
            
            
          </ul>
          
          
                
        </div>
        
            
      </div>
      
                  
                              
      <div
        class="ct-snippet__content-bottom"
      >
        Bottom content
      </div>
      
                        
    </div>
    
      
  </div>
  

</div>
`;

exports[`Snippet Component renders with required attributes 1`] = `
<div>
  

  
  <div
    class="ct-snippet ct-theme-light "
  >
    
          
    <div
      class="ct-snippet__content"
    >
      
                          
                                          
      <div
        class="ct-snippet__title"
      >
                                      Snippet Title
                          
      </div>
      
                  
                          
                              


      <div
        class="ct-paragraph ct-theme-light ct-paragraph--regular ct-paragraph--no-margin ct-snippet__summary"
      >
        This is the summary of the snippet.
      </div>
                        
                          
                                
    </div>
    
      
  </div>
  

</div>
`;
